# PRIYOMysh

./: README.md
client/: CMakeLists.txt  README.md  authdialog.cpp  authdialog.h  feedwindow.cpp  feedwindow.h  friendfinder.cpp  friendfinder.h  install_dependencies.sh  mainwindow.cpp  mainwindow.h  omnom_window.txt  postdialog.cpp  postdialog.h  profiledialog.cpp  profiledialog.h  resources.qrc  run.sh
server/: CMakeLists.txt  config.json  helpers.h  helpers.hpp  main.cpp  run.sh
server/controllers/: AuthController.cpp  AuthController.h  FriendsController.cpp  FriendsController.hpp  PostsController.cpp  PostsController.hpp
